force-app/main/default/objects/RevenueClassification__c/RevenueClassification__c.object-meta.xml
<CustomObject>
    <label>Revenue Classification</label>
    <nameField>
        <label>Revenue Classification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>