force-app/main/default/objects/RevenueClassification__c/fields/AdminIsIncludedInInclusivePrice__c.field-meta.xml
<CustomField>
    <fullName>AdminIsIncludedInInclusivePrice__c</fullName>
    <description>Indicates that Admin Charge is included in the inclusive price.</description>
    <inlineHelpText>Indicates that Admin Charge is included in the inclusive price.</inlineHelpText>
    <label>Admin Is Included In Inclusive Price</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>