force-app/main/default/objects/RevenueClassification__c/fields/ApplyChargesToDiscPrice__c.field-meta.xml
<CustomField>
    <fullName>ApplyChargesToDiscPrice__c</fullName>
    <description>Determines whether admin charge or gratuity are applied to the DiscountedExtPrice (true) or the ExtPrice (false).</description>
    <inlineHelpText>Determines whether admin charge or gratuity are applied to the DiscountedExtPrice (true) or the ExtPrice (false).</inlineHelpText>
    <label>Apply Charges To Disc Price</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>