force-app/main/default/objects/RevenueClassification__c/fields/CategoryMapping__c.field-meta.xml
<CustomField>
    <fullName>CategoryMapping__c</fullName>
    <description>Determines how a revenue classification maps to the numbered revenue fields (1 through 15) on Booking and BookingEvent. VALUE IS CALCULATED BY DELPHI.FDC: DO NOT MODIFY MANUALLY.</description>
    <inlineHelpText>Determines how a revenue classification maps to the numbered revenue fields (1 through 15) on Booking and BookingEvent. VALUE IS CALCULATED BY DELPHI.FDC: DO NOT MODIFY MANUALLY.</inlineHelpText>
    <label>Category Mapping</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>