force-app/main/default/objects/RevenueClassification__c/fields/DefaultAdminCharge__c.field-meta.xml
<CustomField>
    <fullName>DefaultAdminCharge__c</fullName>
    <description>The default administrative charge percent for items in this category.</description>
    <inlineHelpText>The default administrative charge percent for items in this category.</inlineHelpText>
    <label>Default Admin Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>