force-app/main/default/objects/RevenueClassification__c/fields/DefaultGratuity__c.field-meta.xml
<CustomField>
    <fullName>DefaultGratuity__c</fullName>
    <description>The default gratuity percent for items in this category.</description>
    <inlineHelpText>The default gratuity percent for items in this category.</inlineHelpText>
    <label>Default Gratuity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>