force-app/main/default/objects/RevenueClassification__c/fields/GratuityIsIncludedInInclusivePrice__c.field-meta.xml
<CustomField>
    <fullName>GratuityIsIncludedInInclusivePrice__c</fullName>
    <description>Indicates that Gratuity is included in the inclusive price.</description>
    <inlineHelpText>Indicates that Gratuity is included in the inclusive price.</inlineHelpText>
    <label>Gratuity Is Included In Inclusive Price</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>