force-app/main/default/objects/RevenueClassification__c/fields/IsAdminChargeRevenue__c.field-meta.xml
<CustomField>
    <fullName>IsAdminChargeRevenue__c</fullName>
    <description>Indicates that this classification is the special classification that admin charge revenue should be placed in. Exactly one RevenueClassification can have this checked, and IsFunctionRoomRevenue cannot be checked on the same one.</description>
    <inlineHelpText>Indicates that this classification is the special classification that admin charge revenue should be placed in. Exactly one RevenueClassification can have this checked, and IsFunctionRoomRevenue cannot be checked on the same one.</inlineHelpText>
    <label>Is Admin Charge Revenue</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>