force-app/main/default/objects/RevenueClassification__c/fields/IsFunctionRoomRevenue__c.field-meta.xml
<CustomField>
    <fullName>IsFunctionRoomRevenue__c</fullName>
    <description>Indicates that this classification is the special classification that function room rental revenue should be placed in. Exactly one RevenueClassification can have this checked, and IsAdminChargeRevenue cannot be checked on the same one.</description>
    <inlineHelpText>Indicates that this classification is the special classification that function room rental revenue should be placed in. Exactly one RevenueClassification can have this checked, and IsAdminChargeRevenue cannot be checked on the same one.</inlineHelpText>
    <label>Is Function Room Revenue</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>