force-app/main/default/objects/RevenueClassification__c/fields/IsRootClassification__c.field-meta.xml
<CustomField>
    <fullName>IsRootClassification__c</fullName>
    <description>Indicates whether this is one of the top-level, predefined revenue classifications. VALUE ASSIGNED BY DELPHI.FDC AND SHOULD NOT BE MODIFIED.</description>
    <inlineHelpText>Indicates whether this is one of the top-level, predefined revenue classifications. VALUE ASSIGNED BY DELPHI.FDC AND SHOULD NOT BE MODIFIED.</inlineHelpText>
    <label>Is Root Classification</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>