force-app/main/default/objects/RevenueClassification__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>RevenueClassificationLocation</relationshipName>
    <type>Lookup</type>
</CustomField>