force-app/main/default/objects/RevenueClassification__c/fields/MapsToCorporate__c.field-meta.xml
<CustomField>
    <fullName>MapsToCorporate__c</fullName>
    <description>When MasterSource == \</description>
    <inlineHelpText>When MasterSource == \</inlineHelpText>
    <label>Maps To Corporate</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>RevenueClassification__c</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>MapsToCorporate</relationshipName>
    <type>Lookup</type>
</CustomField>