force-app/main/default/objects/RevenueClassification__c/fields/MasterSource__c.field-meta.xml
<CustomField>
    <fullName>MasterSource__c</fullName>
    <description>Indicates the controlling \</description>
    <inlineHelpText>Indicates the controlling \</inlineHelpText>
    <label>Master Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>