force-app/main/default/objects/RevenueClassification__c/fields/ParentClassification__c.field-meta.xml
<CustomField>
    <fullName>ParentClassification__c</fullName>
    <description>Allows specifying sub-classifications of top-level revenue classifications.</description>
    <inlineHelpText>Allows specifying sub-classifications of top-level revenue classifications.</inlineHelpText>
    <label>Parent Classification</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>RevenueClassification__c</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>ParentClassification</relationshipName>
    <type>Lookup</type>
</CustomField>